# RoCS

./: .gitignore  CMakeLists.txt  README.md  RoCS  compile_pioneer_and_robotnik.sh  pos_and_actions_p3dx.txt  pos_and_actions_robotnik.txt
pioneer_astar/: CMakeLists.txt  main.cpp
pioneer_astar/Kaiju/Actuators/: actuator.h  actuator_accessor.h  motor.h  servo_motor.h
pioneer_astar/Kaiju/Analyze/: analyze.h
pioneer_astar/Kaiju/Execute/: action.h  execute.h  execute_pipeline.h
pioneer_astar/Kaiju/Knowledge/: blackboard.h  color_system.h  fov.h  knowledge.cpp  knowledge.h  position.h  reactive_model.h  robot_model.h  strategy_model.h  tire.h
pioneer_astar/Kaiju/Monitor/: monitor.h
pioneer_astar/Kaiju/Plan/: behavior.h  planner.h  task.h
pioneer_astar/Kaiju/Sensors/: accelerometer.h  camera.h  gyroscope.h  imu.h  magnetometer.h  odometer.h  range.h  rfid.h  rgb_d.h  sensor.h  sensor_accessor.h  sonar.h
pioneer_astar/Kaiju/Util/: observer.h  pipeline.cpp  pipeline.h  publisher.h
pioneer_astar/Kaiju/Visualizer/: monitor_visualizer.h
pioneer_astar/PioneerP3DX/AStarPioneer/: a_star_pioneer.cpp  a_star_pioneer.h  origin_pioneer.cpp  origin_pioneer.h
pioneer_astar/PioneerP3DX/Actuators/: wheel_vrep.cpp  wheel_vrep.h
pioneer_astar/PioneerP3DX/Analyze/: pass_orientation.cpp  pass_orientation.h  pass_position.cpp  pass_position.h  pass_range.cpp  pass_range.h  pass_sonar.cpp  pass_sonar.h  pass_sonar_position.cpp  pass_sonar_position.h
pioneer_astar/PioneerP3DX/Connection/: connection.cpp  connection.h
pioneer_astar/PioneerP3DX/Execute/: execute_p3dx.h
pioneer_astar/PioneerP3DX/Knowledge/: avoid_wall_model.cpp  avoid_wall_model.h  euler_angle.cpp  euler_angle.h  pioneer_p3dx_model.cpp  pioneer_p3dx_model.h  pioneer_p_3_dx_model.cpp  pioneer_p_3_dx_model.h
pioneer_astar/PioneerP3DX/Monitor/: orientation_vrep_monitor.cpp  orientation_vrep_monitor.h  position_vrep_monitor.cpp  position_vrep_monitor.h  range_vrep_monitor.cpp  range_vrep_monitor.h  sonar_vrep_monitor.cpp  sonar_vrep_monitor.h  sonars_vrep_monitor.cpp  sonars_vrep_monitor.h
pioneer_astar/PioneerP3DX/OriginPioneer/: origin_pioneer.cpp  origin_pioneer.h
pioneer_astar/PioneerP3DX/Plan/: brait_plan.cpp  brait_plan.h  go_to_origin_planner.cpp  go_to_origin_planner.h
pioneer_astar/PioneerP3DX/Sensors/: orientation_sensor.cpp  orientation_sensor.h  orientation_vrep_sensor.cpp  orientation_vrep_sensor.h  position_vrep_sensor.cpp  position_vrep_sensor.h  range_vrep.cpp  range_vrep.h  range_vrep_sensor.cpp  range_vrep_sensor.h  sonar_output.h  sonar_vrep.cpp  sonar_vrep.h
pioneer_astar/remote_api_vrep/: CMakeLists.txt  readme.txt
pioneer_astar/remote_api_vrep/common/: luaFunctionDataItem.cpp  scriptFunctionData.cpp  socketOutConnection.cpp  v_repLib.cpp
pioneer_astar/remote_api_vrep/include/: _dirent.h  luaFunctionData.h  socketInConnection.h  v_repConst.h  v_repLib.h  v_repTypes.h
pioneer_astar/remote_api_vrep/remoteApi/: extApi.c  extApiPlatform.c  extApiPlatform.h
pioneer_astar/remote_api_vrep/v_repMath/: 3X3Matrix.h  4X4Matrix.h  7Vector.h  VPoint.h
pioneer_wall_tests/: CMakeLists.txt  main.cpp
pioneer_wall_tests/Analyze/: pass_vrep_position.h
pioneer_wall_tests/Connection/: connection.cpp
pioneer_wall_tests/Execute/Actions/: go_to_position.cpp  set_wheels_speed.h  turn_to_angle.cpp
pioneer_wall_tests/Kaiju/Actuators/: actuator.h  rotary_motor.h
pioneer_wall_tests/Kaiju/Analyze/: analyze.h
pioneer_wall_tests/Kaiju/Execute/: action.h  execute.h
pioneer_wall_tests/Kaiju/Knowledge/: knowledge.h  reactive_model.h  robot_model.h  strategy_model.h
pioneer_wall_tests/Kaiju/Monitor/: monitor.h
pioneer_wall_tests/Kaiju/Plan/: behavior.h  planner.h  task.h
pioneer_wall_tests/Kaiju/Robot/: robot.h
pioneer_wall_tests/Kaiju/Sensors/: camera.h  gyroscope.h  imu.h  odometer.h  range.h  rgb_d.h  sensor.h  sonar.h
pioneer_wall_tests/Kaiju/Util/: observer.h  orientation.h  pipeline.h  position.h  publisher.h
pioneer_wall_tests/Knowledge/: avoid_wall_model.cpp  p3dx_knowledge.cpp  pioneer_p3dx_knowledge.h  pioneer_p3dx_model.h
pioneer_wall_tests/Plan/: go_to_origin_planner.cpp  go_to_p3dx_planner.h
pioneer_wall_tests/Robot/: pioneer_p3dx.cpp  pioneer_p3dx.h
pioneer_wall_tests/Sensors/: orientation_vrep_sensor.cpp  position_vrep_sensor.h  range_vrep_sensor.cpp
pioneer_wall_tests/pioneer_p3dx_avoid_wall/Actuators/: wheel_vrep.cpp  wheel_vrep.h
pioneer_wall_tests/pioneer_p3dx_avoid_wall/Analyze/: pass_vrep_orientation.cpp  pass_vrep_orientation.h  pass_vrep_position.cpp  pass_vrep_position.h  pass_vrep_range.cpp  pass_vrep_range.h
pioneer_wall_tests/pioneer_p3dx_avoid_wall/Connection/: connection.cpp  connection.h
pioneer_wall_tests/pioneer_p3dx_avoid_wall/Knowledge/: avoid_wall_model.cpp  avoid_wall_model.h  p3dx_knowledge.cpp  p3dx_knowledge.h  pioneer_p3dx_model.h  (+1 more)
pioneer_wall_tests/remote_api_vrep/: Angular Kinematics.ppt
remote_api_vrep/: CMakeLists.txt
remote_api_vrep/common/: luaFunctionData.cpp
remote_api_vrep/include/: shared_memory.h
remote_api_vrep/remoteApi/: extApi.c  extApiPlatform.c
remote_api_vrep/v_repMath/: 4X4FullMatrix.h  6Vector.cpp  6Vector.h  6X6Matrix.cpp  Vector.h
robotnik_follow/: CMakeLists.txt  main.cpp
robotnik_follow/Actuators/: robotnik_wheel_vrep.cpp
robotnik_follow/Analyze/: pass_robotnik_position.cpp  pass_robotnik_position.h
robotnik_follow/Knowledge/: avoid_wall_model.cpp  robotnik_knowledge.cpp  robotnik_knowledge.h
robotnik_follow/Monitor/: position_vrep_monitor.cpp
robotnik_follow/Plan/: go_to_origin_planner.cpp  go_to_origin_planner.h  go_to_p3dx_planner.cpp  go_to_p3dx_planner.h
robotnik_follow/Robot/: robotnik.cpp  robotnik.h
robotnik_follow/Sensors/: P3DXPositionSensor.cpp  P3DXPositionSensor.h  orientation_vrep_sensor.cpp  position_vrep_sensor.cpp  position_vrep_sensor.h  range_vrep_sensor.cpp  range_vrep_sensor.h
robotnik_follow/remote_api_vrep/: .~lock.Angular Kinematics.ppt#  CMakeLists.txt
src/: CMakeLists.txt
src/Implementation/: main.cpp
src/Pioneer_p3dx/: main.cpp
src/lib/: CMakeLists.txt
(+345 files in other folders)
